Allow env var for node version

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,16 +38,20 @@ parameters:
   GITHUB_ACCESS_TOKEN:
     type: string
     default: ""
+  NODE_VERSION:
+    type: string
+    default: "22.4.1"
 
 jobs:
   publish:
     docker:
-      - image: cimg/node:22.4.1
+      - image: cimg/node:<< pipeline.parameters.NODE_VERSION >>
     steps:
       - run:
           name: Install dependencies
           command: |
             sudo apt-get update && sudo apt-get install -y awscli
+            npm install -g npm@latest
             npm install node-forge
       - run:
           name: Decode environment variables
