--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,18 +52,7 @@ jobs:
     steps:
       - restore_cache:
           keys:
-            - source-v1-{{ .Branch }}-{{ .Revision }}
-            - source-v1-{{ .Branch }}-
-            - source-v1-
-      - checkout
-      - save_cache:
-          paths:
-            - ".git"
-          key: source-v1-{{ .Branch }}-{{ .Revision }}
-
-      - restore_cache:
-          keys:
-            - nvm-{{ checksum ".nvmrc" }}
+            - nvm-v1-{{ checksum "<<pipeline.parameters.NODE_VERSION>>" }}
       - run:
           name: Install NVM and Node.js
           command: |
@@ -79,30 +68,11 @@ jobs:
       - save_cache:
           paths:
             - ~/.nvm
-          key: nvm-{{ checksum ".nvmrc" }}
-
-      - run:
-          name: Print Node.js version
-          command: |
-            node --version
-            npm --version
+          key: nvm-v1-{{ checksum "<<pipeline.parameters.NODE_VERSION>>" }}
 
       - restore_cache:
           keys:
-            - npm-packages-{{ checksum "package-lock.json" }}
-      - run:
-          name: Install dependencies
-          command: |
-            npm ci
-            npm install node-forge
-      - save_cache:
-          paths:
-            - ~/.npm
-          key: npm-packages-{{ checksum "package-lock.json" }}
-
-      - restore_cache:
-          keys:
-            - awscli-{{ checksum "/usr/local/bin/aws" }}
+            - awscli-v1-{{ checksum "/usr/local/bin/aws" }}
       - run:
           name: Install AWS CLI
           command: |
@@ -112,7 +82,13 @@ jobs:
       - save_cache:
           paths:
             - /usr/local/bin/aws
-          key: awscli-{{ checksum "/usr/local/bin/aws" }}
+          key: awscli-v1-{{ checksum "/usr/local/bin/aws" }}
+
+      - run:
+          name: Print Node.js version
+          command: |
+            node --version
+            npm --version
 
       - run:
           name: Decode secrets
