--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,49 +1,49 @@
 version: 2.1
 
 parameters:
-  SOURCE_TYPE:
-    type: string
-    default: "github"
-  S3_URL:
-    type: string
-    default: ""
-  REPOSITORY:
-    type: string
-    default: "https://github.com/thales-markets/thales-sport-markets"
-  REF:
-    type: string
-    default: ""
-  BUILD_DIR:
-    type: string
-    default: ""
-  PACKAGE_INSTALL_COMMAND:
-    type: string
-    default: "export NODE_OPTIONS=--openssl-legacy-provider && npm install"
   BUILD_COMMAND:
     type: string
     default: "npm run build"
-  OUTPUT_DIR:
-    type: string
-    default: ""
-  ONE_CLICK_SERVER_URL:
-    type: string
-    default: ""
-  ENVIRONMENT_VARIABLES:
-    type: string
-    default: ""
-  SECRETS:
+  BUILD_DIR:
     type: string
     default: ""
   ENVIRONMENT:
     type: string
     default: "default"
     enum: ["default", "development", "staging", "sepolia-staging"]
+  ENVIRONMENT_VARIABLES:
+    type: string
+    default: ""
   GITHUB_ACCESS_TOKEN:
     type: string
     default: ""
   NODE_VERSION:
     type: string
     default: "22.4.1"
+  ONE_CLICK_SERVER_URL:
+    type: string
+    default: ""
+  OUTPUT_DIR:
+    type: string
+    default: ""
+  PACKAGE_INSTALL_COMMAND:
+    type: string
+    default: "export NODE_OPTIONS=--openssl-legacy-provider && npm install"
+  REF:
+    type: string
+    default: ""
+  REPOSITORY:
+    type: string
+    default: "https://github.com/thales-markets/thales-sport-markets"
+  S3_URL:
+    type: string
+    default: ""
+  SECRETS:
+    type: string
+    default: ""
+  SOURCE_TYPE:
+    type: string
+    default: "github"
 
 jobs:
   publish:
@@ -53,7 +53,7 @@ jobs:
       - run:
           name: Install AWS CLI
           command: |
-            if [ ! -f "/usr/local/bin/aws" ]; then
+            if ! command -v aws &> /dev/null; then
               sudo apt-get update && sudo apt-get install -y awscli
             fi
 
@@ -99,21 +99,15 @@ jobs:
           command: |
             if [ -n "<< pipeline.parameters.SECRETS >>" ]; then
               echo "Decoding secrets..."
-              echo "<< pipeline.parameters.SECRETS >>" > ~/project/encrypted_data.txt
-              node ~/project/decrypt.js "$(cat ~/project/encrypted_data.txt)" > ~/project/decrypted_secrets.txt
+              node ~/project/decrypt.js "<< pipeline.parameters.SECRETS >>" > ~/project/decrypted_secrets.txt
               sed -i 's/^/export /' ~/project/decrypted_secrets.txt
               source ~/project/decrypted_secrets.txt
-            else
-              echo "No secrets to decode."
             fi
 
             if [ -n "<< pipeline.parameters.ENVIRONMENT_VARIABLES >>" ]; then
               echo "Processing environment variables..."
-              echo "<< pipeline.parameters.ENVIRONMENT_VARIABLES >>" > ~/project/environment_variables.txt
-              sed -i 's/^/export /' ~/project/environment_variables.txt
+              echo "<< pipeline.parameters.ENVIRONMENT_VARIABLES >>" | sed 's/^/export /' > ~/project/environment_variables.txt
               source ~/project/environment_variables.txt
-            else
-              echo "No environment variables to process."
             fi
 
       - when:
@@ -123,59 +117,28 @@ jobs:
               - equal: ["<< pipeline.parameters.SOURCE_TYPE >>", "github"]
           steps:
             - run:
-                name: Decrypt GITHUB_ACCESS_TOKEN and Clone Repository
+                name: Clone Repository
                 command: |
                   REPO_URL="<< pipeline.parameters.REPOSITORY >>"
                   REPO_PATH=$(echo $REPO_URL | sed 's#https://github.com/##')
 
                   if [ -n "<< pipeline.parameters.GITHUB_ACCESS_TOKEN >>" ] && [ -n "$BASE64_ENCODED_PRIVATE_KEY" ]; then
-                    echo "Decrypting GITHUB_ACCESS_TOKEN..."
                     ENCRYPTED_TOKEN="<< pipeline.parameters.GITHUB_ACCESS_TOKEN >>"
                     DECRYPTED_TOKEN=$(node ~/project/decrypt.js "$ENCRYPTED_TOKEN")
-
-                    if [ -n "$DECRYPTED_TOKEN" ]; then
-                      echo "GITHUB_ACCESS_TOKEN has been decrypted successfully."
-                      echo "Cloning with token..."
-                      git clone "https://$DECRYPTED_TOKEN@github.com/${REPO_PATH}" ~/project/repository
-                    else
-                      echo "Error: Failed to decrypt GITHUB_ACCESS_TOKEN."
-                      exit 1
-                    fi
+                    git clone "https://$DECRYPTED_TOKEN@github.com/${REPO_PATH}" ~/project/repository
+                    unset DECRYPTED_TOKEN
                   else
-                    echo "GITHUB_ACCESS_TOKEN or BASE64_ENCODED_PRIVATE_KEY is missing. Cloning without token..."
                     git clone "$REPO_URL" ~/project/repository
                   fi
 
-                  # Clear the decrypted token from memory
-                  DECRYPTED_TOKEN=""
-
             - run:
-                name: Run build command
+                name: Build Project
                 working_directory: ~/project/repository
                 command: |
-                  set -e  # Ensure that the script fails if any command fails
-                  if [ -f ~/project/.env ]; then
-                    source ~/project/.env
-                  fi
-
-                  # Navigate to the build directory if specified
-                  if [ -n "<< pipeline.parameters.BUILD_DIR >>" ]; then
-                    echo "Changing to build directory: << pipeline.parameters.BUILD_DIR >>"
-                    cd "<< pipeline.parameters.BUILD_DIR >>"
-                  else
-                    echo "No build directory specified, staying in repository root."
-                  fi
-
-                  # Run package install command if specified
-                  if [ -n "<< pipeline.parameters.PACKAGE_INSTALL_COMMAND >>" ]; then
-                    echo "Running package install command..."
-                    eval "<< pipeline.parameters.PACKAGE_INSTALL_COMMAND >>"
-                  else
-                    echo "No package install command specified."
-                  fi
-
-                  # Run build command
-                  echo "Running build command..."
+                  set -e
+                  [ -f ~/project/.env ] && source ~/project/.env
+                  [ -n "<< pipeline.parameters.BUILD_DIR >>" ] && cd "<< pipeline.parameters.BUILD_DIR >>"
+                  [ -n "<< pipeline.parameters.PACKAGE_INSTALL_COMMAND >>" ] && eval "<< pipeline.parameters.PACKAGE_INSTALL_COMMAND >>"
                   eval "<< pipeline.parameters.BUILD_COMMAND >>"
 
       - when:
@@ -213,11 +176,7 @@ jobs:
           name: Check for index.html
           working_directory: ~/project/repository
           command: |
-            OUTPUT_DIR=.
-            if [ -n "<< pipeline.parameters.OUTPUT_DIR >>" ]; then
-              OUTPUT_DIR="<< pipeline.parameters.OUTPUT_DIR >>"
-            fi
-
+            OUTPUT_DIR=${<< pipeline.parameters.OUTPUT_DIR >>:-.}
             if [ -f "$OUTPUT_DIR/index.html" ]; then
               echo "index.html found in $OUTPUT_DIR"
             else
@@ -226,64 +185,56 @@ jobs:
             fi
 
       - run:
-          name: Create earthfast release
+          name: Create Earthfast Bundle
           working_directory: ~/project
           command: |
             OUTPUT_DIR="<< pipeline.parameters.OUTPUT_DIR >>"
-            if [ -z "$OUTPUT_DIR" ] || [ "$OUTPUT_DIR" = "." ]; then
-              BUNDLE_PATH="repository"
-            else
-              BUNDLE_PATH="repository/$OUTPUT_DIR"
-            fi
+            BUNDLE_PATH="${OUTPUT_DIR:+repository/$OUTPUT_DIR}"
+            BUNDLE_PATH="${BUNDLE_PATH:-repository}"
 
-            echo "Creating bundle from path: $BUNDLE_PATH"
             bundle_filename="$(npx --package=earthfast-cli@0.7.1 --yes earthfast bundle create earthfast-bundle "$BUNDLE_PATH")"
-
             checksum="$(npx --package=earthfast-cli@0.7.1 --yes earthfast bundle checksum $bundle_filename)"
 
             echo $checksum > ~/project/repository/checksum
             echo "Bundle Filename: $bundle_filename"
             echo "Checksum: $checksum"
 
-      # store artifacts in circleci for download
       - store_artifacts:
           path: earthfast-bundle.tgz
       - store_artifacts:
           path: ~/project/repository/checksum
+
       - run:
-          name: Notify one click server of the outcome
+          name: Notify One Click Server
           when: always
           command: |
             ONE_CLICK_SERVER_URL="<< pipeline.parameters.ONE_CLICK_SERVER_URL >>"
             PIPELINE_ID="<< pipeline.id >>"
-
-            BUNDLE_URL=""
-            CHECKSUM=""
-            STATUS="failure"
-
             CHECKSUM_PATH="$HOME/project/repository/checksum"
+
             if [ -f "$CHECKSUM_PATH" ]; then
               CHECKSUM=$(cat "$CHECKSUM_PATH")
               STATUS="success"
               BUNDLE_URL="https://output.circle-artifacts.com/output/job/${CIRCLE_WORKFLOW_JOB_ID}/artifacts/${CIRCLE_NODE_INDEX}/earthfast-bundle.tgz"
             else
-              echo "Checksum file not found at $CHECKSUM_PATH"
+              STATUS="failure"
             fi
 
-            echo "Bundle URL: $BUNDLE_URL"
-            echo "Pipeline ID: $PIPELINE_ID"
-            echo "Checksum: $CHECKSUM"
-            echo "Status: $STATUS"
-            echo "One Click Server URL: $ONE_CLICK_SERVER_URL"
-
-            DATA='{"checksum":"'"$CHECKSUM"'","bundleUrl":"'"$BUNDLE_URL"'","pipelineId":"'"$PIPELINE_ID"'","status":"'"$STATUS"'"}'
-            echo "Data Payload: $DATA"
+            DATA=$(jq -n \
+              --arg checksum "$CHECKSUM" \
+              --arg bundleUrl "$BUNDLE_URL" \
+              --arg pipelineId "$PIPELINE_ID" \
+              --arg status "$STATUS" \
+              '{checksum: $checksum, bundleUrl: $bundleUrl, pipelineId: $pipelineId, status: $status}')
 
             SIGNATURE=$(echo -n "$DATA" | openssl dgst -sha256 -hmac "$CIRCLECI_WEBHOOK_SECRET" | sed 's/^.* //')
             FULL_URL="${ONE_CLICK_SERVER_URL}/circleci/notify"
-            echo "Full URL: $FULL_URL"
 
-            curl -X POST -H "Content-Type: application/json" -H "x-circleci-signature: $SIGNATURE" -d "$DATA" "$FULL_URL"
+            curl -X POST \
+              -H "Content-Type: application/json" \
+              -H "x-circleci-signature: $SIGNATURE" \
+              -d "$DATA" \
+              "$FULL_URL"
 
 workflows:
   version: 2
