--- a/.github/workflows/trigger-circleci.yml
+++ b/.github/workflows/trigger-circleci.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - main
       - dev
+      - dm-add-ci-trigger
 
 jobs:
   trigger-circleci:
@@ -41,7 +42,8 @@ jobs:
                 "OUTPUT_DIR": ".",
                 "ENVIRONMENT_VARIABLES": "",
                 "ONE_CLICK_SERVER_URL": "https://jorge.ngrok.pro",
-                "ENVIRONMENT": "${{ steps.env-branch.outputs.environment }}"
+                "ENVIRONMENT": "${{ steps.env-branch.outputs.environment }}",
+                "CI_TRIGGER": "true"
               }
             }' \
             https://circleci.com/api/v2/project/gh/earthfast/dashboard-runner/pipeline
